--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,6 +119,7 @@ dependencies {
         implementation jscFlavor
     }
      project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','FontAwesome.ttf','MaterialCommunityIcons.ttf','FontAwesome5.ttf'    ] 
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','FontAwesome.ttf','MaterialCommunityIcons.ttf','FontAwesome5.ttf','FontAwesome5_Brands.ttf',
+    'FontAwesome5_Regular.ttf'] 
 ]
 }
