--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.3.2",
-    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/drawer": "^7.3.2",
+    "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.2",
     "react": "18.3.1",
     "react-native": "0.77.0",
@@ -19,7 +20,8 @@
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
