--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.11.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
@@ -42,6 +42,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.7.0",
     "prettier": "2.8.8",
+    "react-native-reanimated": "^3.17.1",
     "react-test-renderer": "^18.3.1",
     "typescript": "5.0.4"
   },
@@ -50,6 +51,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+      "E:/NativeFinalProject/YouTube/jestSetup.js"
+    ],
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
     },
