--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.24.0",
